feat: create seed phrase generation & confirmation pages for registration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,8 +52,8 @@
     "login": {
       "title": "Admin Login",
       "subtitle": "GaneshaDCERT Management",
-      "institutionLogin": "Institution Login",
-      "institutionLoginSubtitle": "Login to your institution account",
+      "institutionLogin": "Enter Your Seed Phrase",
+      "institutionLoginSubtitle": "Enter your credential to interact with our system",
       "email": "Email",
       "password": "Password",
       "emailPlaceholder": "admin@ganeshadcert.com",
@@ -67,11 +67,36 @@
       "invalidCredentials": "Invalid email or password"
     },
     "register": {
-      "title": "Institution Registration",
-      "subtitle": "Register your institution to issue digital certificates",
+      "title": "Create an Account",
+      "subtitle": "Create your institution wallet to get started",
+      "seedPhrase": {
+        "title": "Write down your Seed Phrase",
+        "subtitle": "Save your seed phrase securely to recover your wallet",
+        "warningTitle": "Important!",
+        "warningMessage": "Write down your seed phrase and keep it in a safe place. You will need it to recover your wallet. Do not share it with anyone!",
+        "copyButton": "Copy to Clipboard",
+        "continueButton": "Continue",
+        "processing": "Processing..."
+      },
+      "confirmSeed": {
+        "title": "Confirm your Seed Phrase",
+        "subtitle": "Select the words in the correct order to verify your seed phrase",
+        "selectedWords": "Your seed phrase:",
+        "selectInOrder": "Select words in order:",
+        "backButton": "Back",
+        "verifyButton": "Verify",
+        "processing": "Processing...",
+        "errorIncomplete": "Please select all 12 words",
+        "errorIncorrect": "The seed phrase order is incorrect. Please try again."
+      },
       "success": {
-        "title": "Registration Submitted!",
-        "subtitle": "Thank you for your registration request. Your application is now under review by our admin team. Once approved, we will send a magic link to your registered email address to complete the setup process. Please check your inbox regularly for our confirmation email.",
+        "title": "Congratulations!",
+        "subtitle": "Your wallet has been successfully created",
+        "yourDID": "Your DID (Decentralized Identifier):",
+        "copyButton": "Copy DID",
+        "copied": "Copied!",
+        "didMessage": "Your DID is your unique identifier on the blockchain. Save it securely.",
+        "continueButton": "Continue",
         "backToHome": "Back to Home",
         "whatHappensNext": "What happens next?",
         "step1": "Our admin team will review your application",
@@ -91,6 +116,7 @@
       "websitePlaceholder": "https://ui.ac.id",
       "addressPlaceholder": "UI Campus Depok, West Java 16424",
       "registerButton": "Register",
+      "continueButton": "Continue",
       "processing": "Processing...",
       "alreadyHaveAccount": "Already have an account?",
       "loginHere": "Login here",
