--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -67,11 +67,36 @@
       "invalidCredentials": "Email atau kata sandi salah"
     },
     "register": {
-      "title": "Pendaftaran Institusi",
-      "subtitle": "Daftarkan institusi Anda untuk menerbitkan sertifikat digital",
+      "title": "Buat Akun",
+      "subtitle": "Buat wallet institusi Anda untuk memulai",
+      "seedPhrase": {
+        "title": "Catat Frasa Pemulihan Anda",
+        "subtitle": "Simpan frasa pemulihan Anda dengan aman untuk memulihkan wallet",
+        "warningTitle": "Penting!",
+        "warningMessage": "Tulis frasa pemulihan Anda dan simpan di tempat yang aman. Anda akan membutuhkannya untuk memulihkan wallet Anda. Jangan bagikan kepada siapapun!",
+        "copyButton": "Salin ke Clipboard",
+        "continueButton": "Lanjutkan",
+        "processing": "Memproses..."
+      },
+      "confirmSeed": {
+        "title": "Konfirmasi Frasa Pemulihan Anda",
+        "subtitle": "Pilih kata-kata dalam urutan yang benar untuk memverifikasi frasa pemulihan",
+        "selectedWords": "Frasa pemulihan Anda:",
+        "selectInOrder": "Pilih kata sesuai urutan:",
+        "backButton": "Kembali",
+        "verifyButton": "Verifikasi",
+        "processing": "Memproses...",
+        "errorIncomplete": "Silakan pilih semua 12 kata",
+        "errorIncorrect": "Urutan frasa pemulihan tidak benar. Silakan coba lagi."
+      },
       "success": {
-        "title": "Pendaftaran Terkirim!",
-        "subtitle": "Terima kasih atas permintaan pendaftaran Anda. Aplikasi Anda sekarang sedang ditinjau oleh tim admin kami. Setelah disetujui, kami akan mengirimkan tautan ajaib ke alamat email terdaftar Anda untuk menyelesaikan proses pengaturan. Silakan periksa kotak masuk Anda secara berkala untuk email konfirmasi kami.",
+        "title": "Selamat!",
+        "subtitle": "Wallet Anda telah berhasil dibuat",
+        "yourDID": "DID Anda (Identitas Terdesentralisasi):",
+        "copyButton": "Salin DID",
+        "copied": "Tersalin!",
+        "didMessage": "DID Anda adalah identitas unik Anda di blockchain. Simpan dengan aman.",
+        "continueButton": "Lanjutkan",
         "backToHome": "Kembali ke Beranda",
         "whatHappensNext": "Apa yang terjadi selanjutnya?",
         "step1": "Tim admin kami akan meninjau aplikasi Anda",
@@ -91,6 +116,7 @@
       "websitePlaceholder": "https://ui.ac.id",
       "addressPlaceholder": "Kampus UI Depok, Jawa Barat 16424",
       "registerButton": "Daftar",
+      "continueButton": "Lanjutkan",
       "processing": "Memproses...",
       "alreadyHaveAccount": "Sudah punya akun?",
       "loginHere": "Masuk di sini",
