--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -56,11 +56,36 @@
       "invalidCredentials": "잘못된 이메일 또는 비밀번호"
     },
     "register": {
-      "title": "기관 등록",
-      "subtitle": "디지털 인증서를 발급하기 위해 기관을 등록하세요",
+      "title": "계정 만들기",
+      "subtitle": "시작하려면 기관 지갑을 만드세요",
+      "seedPhrase": {
+        "title": "시드 문구를 적어두세요",
+        "subtitle": "지갑을 복구하려면 시드 문구를 안전하게 저장하세요",
+        "warningTitle": "중요!",
+        "warningMessage": "시드 문구를 적어 안전한 곳에 보관하세요. 지갑을 복구하는 데 필요합니다. 누구와도 공유하지 마세요!",
+        "copyButton": "클립보드에 복사",
+        "continueButton": "계속",
+        "processing": "처리 중..."
+      },
+      "confirmSeed": {
+        "title": "시드 문구 확인",
+        "subtitle": "시드 문구를 확인하려면 올바른 순서로 단어를 선택하세요",
+        "selectedWords": "시드 문구:",
+        "selectInOrder": "순서대로 단어 선택:",
+        "backButton": "뒤로",
+        "verifyButton": "확인",
+        "processing": "처리 중...",
+        "errorIncomplete": "12개 단어를 모두 선택해주세요",
+        "errorIncorrect": "시드 문구 순서가 올바르지 않습니다. 다시 시도해주세요."
+      },
       "success": {
-        "title": "등록 제출 완료!",
-        "subtitle": "등록 요청을 주셔서 감사합니다. 귀하의 신청서는 현재 관리자 팀에서 검토 중입니다. 승인되면 등록하신 이메일 주소로 매직 링크를 보내드려 설정 프로세스를 완료할 수 있도록 하겠습니다. 확인 이메일을 받기 위해 정기적으로 받은 편지함을 확인해 주세요.",
+        "title": "축하합니다!",
+        "subtitle": "지갑이 성공적으로 생성되었습니다",
+        "yourDID": "귀하의 DID (탈중앙화 식별자):",
+        "copyButton": "DID 복사",
+        "copied": "복사됨!",
+        "didMessage": "DID는 블록체인에서 귀하의 고유 식별자입니다. 안전하게 저장하세요.",
+        "continueButton": "계속",
         "backToHome": "홈으로 돌아가기",
         "whatHappensNext": "다음 단계는 무엇입니까?",
         "step1": "관리자 팀이 귀하의 신청서를 검토합니다",
@@ -80,6 +105,7 @@
       "websitePlaceholder": "https://ui.ac.id",
       "addressPlaceholder": "데폭 UI 캠퍼스, 서부 자바 16424",
       "registerButton": "등록",
+      "continueButton": "계속",
       "processing": "처리 중...",
       "alreadyHaveAccount": "이미 계정이 있으신가요?",
       "loginHere": "여기서 로그인",
